# future_code

./: .gitignore  environment.yml  pyproject.toml  requirements.txt
notebook/: eda.ipynb  notebook.ipynb
practice.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  constants.py  data_utils.py  library.py  ml_utils.py  viz_utils.py
src.egg-info/: SOURCES.txt
src/practice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
