[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "practice"
version = "0.0.1"
description = "Future Practice to avoid magic string"

dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "seaborn",
  "plotly",
  "statsmodels",
  "scipy",
  "joblib",
  "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["src"]
